# camel-ai-example

./: README.md  pyproject.toml
src/hackathon_judge/: camelai.py  main.py
