[tool.poetry]
name = "hackathon_judge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
camel-ai = {version = "0.2.20", extras = []} 
# install camel-ai from 
python-dotenv = "^1.0.1"
naptha-sdk = {path = "/Users/vedantpadwal/Naptha/plugins/naptha-sdk", develop = true}
protobuf = "^5.26.1"
pillow = "^11.1.0"
requests-oauthlib = "^2.0.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
duckduckgo-search = "^7.5.0"
googlemaps = "^4.10.0"
[tool.poetry.scripts]
hackathon_judge = "hackathon_judge.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"